fix: footer background and logo src

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuickList</title>
+
+    <link rel="stylesheet" href="./style.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="./images/logo.svg" alt="logo da QuickList, se trata do nome escrito em cinza com três traços cor de rosa ao lado.">
+    <img id="logo" src="./images/logo.svg" alt="logo da QuickList, se trata do nome escrito em cinza com três traços cor de rosa ao lado.">
 
     <main>
         <a href="#">
@@ -50,7 +57,7 @@
             </ul>
         </div>
 
-        <footer style="background-color: red;">
+        <footer>
             <img src="./images/warning-circle-filled.svg" alt="">
 
             <p>O item foi removido da lista</p>
