feat: remove old list from <ul>

--- a/index.html
+++ b/index.html
@@ -29,31 +29,8 @@
         </form>
 
         <div id="items">
-            <ul>
-                <li><input type="checkbox">
-                    Pão de forma
-                    <button>
-                        <img src="./images/icon delete.svg" alt="">
-                    </button>
-                </li>
-                <li><input type="checkbox">
-                    Pão de forma
-                    <button>
-                        <img src="./images/icon delete.svg" alt="">
-                    </button>
-                </li>
-                <li><input type="checkbox">
-                    Pão de forma
-                    <button>
-                        <img src="./images/icon delete.svg" alt="">
-                    </button>
-                </li>
-                <li><input type="checkbox">
-                    Pão de forma
-                    <button>
-                        <img src="./images/icon delete.svg" alt="">
-                    </button>
-                </li>
+            <ul id="itemList">
+                <!--Os items serão adicionados aqui-->
             </ul>
         </div>
 
